# OpenDance

./: .gitignore  CMakeLists.txt  README.md
cfg/: config.ini
docs/: KlassenDiagramm.vpp  KlassenDiagramm.vpp.bak_000f  KlassenDiagramm.vpp.bak_001d
src/: CMakeLists.txt  main.cpp
src/GUI/: CMakeLists.txt  Interface.hpp  InterfaceStructs.hpp  InterfaceWrapper.h  MainWindow.cpp  MainWindow.hpp  TestComponent.qml  main.qml  qml.qrc
src/GUI/Components/: BackButton.qml  MenuTitle.qml  StyledButton.qml
src/GUI/CreditsMenu/: CreditsMenu.qml
src/GUI/GameScreen/: GameScreen.qml  PauseMenu.qml  VideoStream.qml  VideoStreamContent.cpp  VideoStreamContent.h
src/GUI/LandingScreen/: LandingScreen.qml
src/GUI/MainMenu/: MainMenu.qml  MainMenuButton.qml
src/GUI/MenuBackground/: MenuBackground.qml  MenuBackgroundParticle.qml
src/GUI/PlayMenu/: DancePreview.qml  DancePreviewView.cpp  DancePreviewView.h  DancesModel.cpp  DancesModel.h  PlayMenu.qml
src/GUI/SettingsMenu/: SettingCombox.qml  SettingContainer.qml  SettingSlider.qml  SettingTextentry.qml  SettingsList.qml  SettingsMenu.qml
src/GameLogic/: CMakeLists.txt  GameLogic.cpp  GameLogic.hpp
src/Graphics/: CMakeLists.txt  Graphics.cpp  Graphics.hpp  VisualFX.cpp  VisualFX.hpp
src/Input/: CMakeLists.txt  Camera.cpp  Camera.hpp  Input.hpp  Video.cpp  Video.hpp
src/Interfaces/: CMakeLists.txt  GuiInterface.cpp  GuiInterface.hpp  InterfaceStructs.hpp
src/MessageBus/: CMakeLists.txt  MessageBus.cpp  MessageBus.hpp  MessageBusStructs.hpp
src/PoseEstimation/: CMakeLists.txt  PoseAnalyser.cpp  PoseAnalyser.hpp  PoseDetector.cpp  PoseDetector.hpp  PoseEstimationStructs.hpp
src/ScoreBoard/: CMakeLists.txt  ScoreBoard.cpp  ScoreBoard.hpp  ScoreBoardStructs.hpp
src/Settings/: Audio.cpp  Audio.hpp  CMakeLists.txt  Settings.cpp  Settings.hpp
src/Utility/: CMakeLists.txt  ConfigFile.cpp  ConfigFile.hpp  Math.cpp  Math.hpp
tools/: setup_dev_env_win64.bat
